--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,15 +4,14 @@
 
     <!-- Settings Menu Item -->
     <item
-        android:id="@+id/action_settings"
-        android:title="@string/settings"
         android:orderInCategory="100"
+        android:title="settings"
         app:showAsAction="ifRoom" />
 
     <!-- Help Menu Item -->
     <item
         android:id="@+id/action_help"
-        android:title="@string/help"
+        android:title="help"
         android:orderInCategory="200"
         app:showAsAction="ifRoom" />
 
