--- a/app/src/main/res/layout/activity_sp.xml
+++ b/app/src/main/res/layout/activity_sp.xml
@@ -28,9 +28,10 @@
         android:layout_centerVertical="true"
         android:onClick="Get"
         android:text="Retrieve"
-        tools:layout_editor_absoluteX="73dp"
-        tools:layout_editor_absoluteY="596dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintEnd_toStartOf="@+id/btnSave"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="596dp" />
 
     <Button
         android:id="@+id/btnClear"
@@ -41,9 +42,10 @@
         android:layout_centerVertical="true"
         android:onClick="clear"
         android:text="Clear"
-        tools:layout_editor_absoluteX="249dp"
-        tools:layout_editor_absoluteY="596dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnSave"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="596dp" />
 
     <EditText
         android:id="@+id/etEmail"
@@ -51,6 +53,7 @@
         android:layout_height="69dp"
         android:layout_below="@+id/etName"
         android:layout_alignParentEnd="true"
+        android:layout_marginTop="68dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="Email"
@@ -70,8 +73,8 @@
         android:hint="Name"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="42dp" />
+        tools:layout_editor_absoluteY="141dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
