--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,9 @@
 <resources>
     <item name="action_settings" type="id" />
     <item name="action_help" type="id" />
+    <item name="etName" type="id" />
+    <item name="etEmail" type="id" />
+    <item name="btnSave" type="id" />
+    <item name="btnClear" type="id" />
+    <item name="btnRetr" type="id" />
 </resources>
